First draft - Branch - Learning jQuery Plugin.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <div></div>
     </div>
     <div id='behance_header'><h3></h3><p></p></div> <div id='behance_project'></div>
+    I'n learning a jQuery Plugin Authoring.
 </section>
 </body>
 </html>
