--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
 <p>A simple plugin for displaying your Behancé Portfolio in your website.</p>
 </header>
 <section>
-    <div id='behance_container'>
-    <div></div>
-    </div>
-    <div id='behance_header'><h3></h3><p></p></div> <div id='behance_project'></div>
-    I'n learning a jQuery Plugin Authoring.
+    <div id='behance_container'><div>
 </section>
 </body>
 </html>
