--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <!--
 
-	Behancé Portfolio Plugin — By Nadir
+	Behance Portfolio Plugin — By Nadir
 	Source: https://github.com/nadirnasir/behance-portfolio-plugin-nadir.git
 
 	Created by Nadir Nasir (@nadirnasir)
@@ -11,7 +11,7 @@
 	Released under the [MIT license](http://nadir.pk/behance/LICENSE)
 
 -->
-<title>Behancé Portfolio Plugin by Nadir</title>
+<title>Behance Portfolio Plugin by Nadir</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta charset="utf-8">
 <meta name="TITLE" content="">
@@ -32,17 +32,17 @@
 
 <!-- CSS Styles -->
 <link rel="stylesheet" media="screen" href="css/nadir.css">
-<!--<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script> -->
-<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700|Titillium+Web:400,200,300' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script> -->
 <script type="text/javascript" src="js/nadir.js"></script>
 </head>
 <body>
 
 <header>
-	<h1>Behancé Portfolio Plugin <small >By <a href="http://www.nadir.pk/">Nadir</a></small></h1>
+	<h1>Behance Portfolio Plugin <small>By <a href="http://www.nadir.pk/">Nadir</a></small></h1>
 <hr />
-<p>A simple plugin for displaying your Behancé Portfolio in your website.</p>
+<p>A simple plugin for displaying your Behance Portfolio in your website.</p>
 </header>
 <section>
     <div id='behance_container'></div>
@@ -50,7 +50,6 @@
 <script type="text/javascript">
 	$(document).ready( function() {
 		$("#behance_container").nadirFunction( {
-
 			"css"	:  { color: "yellow", background: "grey" },
 		});
 	});
