First draft - Branch - Learning jQuery Plugin. - Written some code - Dealt with passing and parsing objects - Wanna do some "finding" in the object - Added readme.md file - Creating the static portfolio display

--- a/index.html
+++ b/index.html
@@ -41,11 +41,28 @@
 
 <header>
 	<h1>Behance Portfolio Plugin <small>By <a href="http://www.nadir.pk/">Nadir</a></small></h1>
-<hr />
 <p>A simple plugin for displaying your Behance Portfolio in your website.</p>
 </header>
 <section>
     <div id='behance_container'></div>
+    <div class="prjCard">
+	    <div class="prjImg"><a href="#"><img src="img/temp/0bee34ae4302124297ac703041e345dd.png"></a></div>
+	    <div class="prjTitle"><h3><a href="#">Nadir.pk v2</a></h3></div>
+	    <div class="prjField"><span>Design</span> <span>Direction</span> <span>Branding</span></div>
+	    <div class="prjMeta">
+		    <span class="prjAppr"><i class="ion-likes"></i> 500</span>
+		    <span class="prjViews"><i class="ion-likes"></i> 596</span>
+	    </div>
+    </div>
+    <div class="prjCard">
+	    <div class="prjImg"><a href="#"><img src="img/temp/2d59fae74e53104cf96ef30519d3f845.png"></a></div>
+	    <div class="prjTitle"><h3><a href="#">Nadir.pk v2</a></h3></div>
+	    <div class="prjField"><span>Design</span> <span>Direction</span> <span>Branding</span></div>
+	    <div class="prjMeta">
+		    <span class="prjAppr"><i class="ion-likes"></i> 500</span>
+		    <span class="prjViews"><i class="ion-likes"></i> 596</span>
+	    </div>
+    </div>
 </section>
 <script type="text/javascript">
 	$(document).ready( function() {
