--- a/project.html
+++ b/project.html
@@ -5,19 +5,20 @@
 </head>
 <body>
     <div id='behance_container'>
-    <div></div>  
+    <div></div>
     </div>
     <div id='behance_header'><h3></h3><p></p></div> <div id='behance_project'></div>
-<script> 
+<script>
 $(document).ready(function(){
 var jqxhr;
-jqxhr = $.getJSON("http://www.behance.net/v2/users/nadirnasir/projects?api_key=BprDSjEB3JUC7AitKzTmQ0wUUw36P9C0&callback=?", function(data) {
+/* jqxhr = $.getJSON("http://www.behance.net/v2/users/nadirnasir/projects?api_key=BprDSjEB3JUC7AitKzTmQ0wUUw36P9C0&callback=?", function(data) { */
+jqxhr = $.getJSON("http://www.behance.net/v2/projects/10165401?api_key=BprDSjEB3JUC7AitKzTmQ0wUUw36P9C0&callback=?", function(data) {
     var project_str = "";
      console.log(data);
     for(var i=0; i<  data.projects.length; i++){
         obj = {};
           obj = data.projects[i];
-          console.log(data.projects[i].id);
+          //console.log(data.projects[i].id);
 project_str += '<a class="link" href="#' + obj.id  + '"><img src="' + obj.covers['202'] + '" /></a>';       }
     $('#behance_container div').append(project_str);
 });
@@ -26,9 +27,9 @@ project_str += '<a class="link" href="#' + obj.id  + '"><img src="' + obj.covers
 $('a.link').click(function(){
 var hash = location.hash.replace("#","");
 var jqxhri;
-jqxhri = $.getJSON("http://www.behance.net/v2/projects/' + hash + '?api_key=BprDSjEB3JUC7AitKzTmQ0wUUw36P9C0&callback=?", function(data) {
+jqxhri = $.getJSON("http://www.behance.net/v2/projects/10165401?api_key=BprDSjEB3JUC7AitKzTmQ0wUUw36P9C0&callback=?", function(data) {
     $('#behance_header h3').html(data.project.name);
-    var project_data = '<p>' + data.project.description + '</p>';       
+    var project_data = '<p>' + data.project.description + '</p>';
     $('#behance_project').html(project_data);   });
         });
 </script></body>
